--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=hbstudent
 spring.datasource.password=hbstudent
 
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
+
+pl.karolcyprowski.basic-algorithm = SimpleSrsGlossAlgorithm
