--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+security.user.password = springsecurity
+
+
+
 spring.datasource.url = jdbc:mysql://localhost:3306/simplesrs?useSSL=false
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.username=hbstudent
