--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 security.user.password = springsecurity
-
+security.user.name = abc@xyz.pl
 
 
 spring.datasource.url = jdbc:mysql://localhost:3306/simplesrs?useSSL=false
