--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ security.user.password = springsecurity
 security.user.name = abc@xyz.pl
 
 
-spring.datasource.url = jdbc:mysql://localhost:3306/simplesrs?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/simplesrs?useSSL=false&useUnicode=yes&characterEncoding=utf8
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.username=hbstudent
 spring.datasource.password=hbstudent
