Move SRS-algorithm selection to app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.password=hbstudent
 
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 
-pl.karolcyprowski.basic-algorithm = SimpleSrsGlossAlgorithm
+pl.karolcyprowski.basic_algorithm = SimpleSrsGlossAlgorithm
